// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Packages | Form Full Example 1`] = `
.c9 {
  padding: 0.46633rem 0.8rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1;
  height: 1.93267rem;
  color: #7189B6;
  text-align: center;
  background-color: #EEF2FC;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  z-index: 5;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c2:before {
  content: '';
  display: inline-block;
  background-color: #EB5000;
  margin: -0.133rem 0.533rem 0 0;
  vertical-align: middle;
  height: 0.266rem;
  width: 0.266rem;
  border-radius: 50%;
  position: absolute;
  left: -0.666rem;
  top: 0.666rem;
}

.c7 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c3 {
  position: relative;
  border-radius: inherit;
}

.c4 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
}

.c4::-webkit-input-placeholder {
  color: #95ABD3;
}

.c4::-moz-placeholder {
  color: #95ABD3;
}

.c4:-ms-input-placeholder {
  color: #95ABD3;
}

.c4::placeholder {
  color: #95ABD3;
}

.c4:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c4:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c11 {
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
  height: auto;
}

.c11::-webkit-input-placeholder {
  color: #95ABD3;
}

.c11::-moz-placeholder {
  color: #95ABD3;
}

.c11:-ms-input-placeholder {
  color: #95ABD3;
}

.c11::placeholder {
  color: #95ABD3;
}

.c11:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c11:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c5 {
  position: relative;
  display: table;
  width: 100%;
  border-collapse: separate;
}

.c6 {
  display: table-cell;
  vertical-align: middle;
}

.c6 > * {
  width: calc(100% + 2px);
}

.c6:not(:first-child) > * {
  margin-left: -1px;
  margin-right: 0;
}

.c6:last-child * {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c6:first-child * {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c6:not(:first-child):not(:last-child) * {
  border-radius: 0;
}

.c8 {
  display: table-cell;
  vertical-align: middle;
  width: 1%;
  white-space: nowrap;
}

.c8 > * {
  width: calc(100% + 2px);
}

.c8:not(:first-child) > * {
  margin-left: -1px;
  margin-right: 0;
}

.c8:last-child * {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c8:first-child * {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c8:not(:first-child):not(:last-child) * {
  border-radius: 0;
}

.c1 {
  display: block;
  margin-bottom: 1.333rem;
  position: relative;
  width: 100%;
}

.c10 {
  display: table;
  margin-bottom: 1.866rem;
  position: relative;
  width: 100%;
}

.c10 > span {
  display: table-cell;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 1%;
  min-width: 8rem;
  padding-right: 1.2rem;
  line-height: 1;
  vertical-align: top;
  padding-top: calc(0.46633rem + 2px);
}

.c14 {
  font-size: 15px;
  cursor: pointer;
  margin-right: 5px;
}

.c14:hover > span:first-child {
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
}

.c17 {
  color: #456296;
}

.c15 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
}

.c19 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 1.066rem;
  height: 1.066rem;
  border: 1px solid #C3D1EB;
  border-radius: 2px;
  background-color: #ffffff;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
  margin: -2px 0.6em 0 0;
  vertical-align: middle;
  border-color: #95ABD3;
}

.c18 {
  display: none;
}

.c16 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 0;
  -webkit-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

.c20 {
  text-align: center;
  width: 100%;
  height: 100%;
  position: relative;
  opacity: 1;
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  pointer-events: none;
  -webkit-transition: all 120ms ease-out;
  transition: all 120ms ease-out;
}

.c12 {
  display: none;
}

.c12:checked + label {
  background-color: #0E86FE;
  box-shadow: 0 0 0 1px #0E86FE;
}

.c12:checked + label div {
  -webkit-transform: translate3d(30px,0,0);
  -ms-transform: translate3d(30px,0,0);
  transform: translate3d(30px,0,0);
  border-color: #0E86FE;
  box-shadow: 0 0 0 3px rgba(14,134,254,0.3);
}

.c12:disabled + label {
  background-color: #EEF2FC;
  cursor: not-allowed;
  point-events: none;
}

.c12:disabled + label div {
  background-color: #EEF2FC;
  box-shadow: none;
}

.c13 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 53px;
  height: 24px;
  border-radius: 4px;
  background-color: #EEF2FC;
  padding: 1px;
  box-shadow: 0 0 0 1px #C3D1EB;
  cursor: pointer;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={true}
    >
      Username
    </span>
    <div
      className="c3"
    >
      <input
        autoFocus={false}
        className="vital__input c4"
        disabled={false}
        onChange={[Function]}
        placeholder="Enter your username"
        spellCheck={false}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={true}
    >
      Fullname
    </span>
    <div
      className="vital__multipleInput c5"
    >
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <input
            autoFocus={false}
            className="vital__input c4"
            disabled={false}
            onChange={[Function]}
            placeholder="First Name"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <input
            autoFocus={false}
            className="vital__input c4"
            disabled={false}
            onChange={[Function]}
            placeholder="Last Name"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={true}
    >
      Birthday
    </span>
    <div
      className="vital__multipleInput c5"
    >
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <input
            autoFocus={false}
            className="vital__input c4"
            disabled={false}
            onChange={[Function]}
            placeholder="Month"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <input
            autoFocus={false}
            className="vital__input c4"
            disabled={false}
            onChange={[Function]}
            placeholder="Day"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <input
            autoFocus={false}
            className="vital__input c4"
            disabled={false}
            onChange={[Function]}
            placeholder="Year"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c7"
      required={false}
    >
      Website
    </span>
    <div
      className="vital__multipleInput c5"
    >
      <div
        className="c8"
      >
        <div
          className="vital__addon c9"
        >
          http:
        </div>
      </div>
      <div
        className="c6"
      >
        <div
          className="c3"
        >
          <input
            autoFocus={false}
            className="vital__input c4"
            disabled={false}
            onChange={[Function]}
            placeholder="LabelAddon on the left"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="vital__fieldInput c10"
  >
    <span
      className="vital__label c7"
      required={false}
    >
      Comment
    </span>
    <textarea
      autoFocus={false}
      className="vital__textarea c11"
      defaultValue=""
      disabled={false}
      id={null}
      maxLength={null}
      onChange={null}
      placeholder="Comment here"
      rows={3}
      spellCheck={false}
      value=""
    />
  </div>
  <div
    className="vital__fieldInput c10"
  >
    <span
      className="vital__label c7"
      required={false}
    >
      Send Email
    </span>
    <div
      className="vital__switch "
      onClick={[Function]}
    >
      <input
        checked={false}
        className="c12"
        disabled={false}
        type="checkbox"
      />
      <label
        className="c13"
        disabled={false}
      />
    </div>
  </div>
  <div
    className="vital__fieldInput c10"
  >
    <span
      className="vital__label c7"
      required={false}
    >
      Interested in
    </span>
    <div
      className="vital__checkbox-group "
      style={
        Object {
          "paddingTop": "calc(0.46633rem + 2px)",
        }
      }
    >
      <label
        className="vital__checkbox c14"
      >
        <span
          checked={false}
          className="c15"
        >
          <div
            checked={false}
            className="c16"
          >
            <svg
              color="#0E86FE"
              height="1em"
              name="check"
              size="12"
              viewBox="0 0 903.77 739.84"
              width="1em"
            >
              <path
                d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
                data-name="Layer 2"
                fill="currentColor"
              />
            </svg>
          </div>
        </span>
        <span
          className="c17"
        >
          <input
            checked={false}
            className="c18"
            disabled={false}
            type="checkbox"
          />
          React
        </span>
      </label>
      <label
        className="vital__checkbox c14"
      >
        <span
          checked={true}
          className="c19"
        >
          <div
            checked={true}
            className="c20"
          >
            <svg
              color="#0E86FE"
              height="1em"
              name="check"
              size="12"
              viewBox="0 0 903.77 739.84"
              width="1em"
            >
              <path
                d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
                data-name="Layer 2"
                fill="currentColor"
              />
            </svg>
          </div>
        </span>
        <span
          className="c17"
        >
          <input
            checked={true}
            className="c18"
            defaultChecked={true}
            disabled={false}
            type="checkbox"
          />
          CSS
        </span>
      </label>
      <label
        className="vital__checkbox c14"
      >
        <span
          checked={false}
          className="c15"
        >
          <div
            checked={false}
            className="c16"
          >
            <svg
              color="#0E86FE"
              height="1em"
              name="check"
              size="12"
              viewBox="0 0 903.77 739.84"
              width="1em"
            >
              <path
                d="M291.88 739.84a31.91 31.91 0 0 1-22.63-9.38l-240-240a99.88 99.88 0 0 1 141.26-141.25l16 16a32 32 0 1 1-45.26 45.25l-16-16a35.88 35.88 0 0 0-50.74 50.75l217.37 217.37 537.37-537.37a35.88 35.88 0 0 0-50.74-50.75l-464 464a32 32 0 0 1-45.26 0l-64-64a32 32 0 0 1 45.26-45.25l41.37 41.37L733.25 29.21a99.88 99.88 0 1 1 141.26 141.25l-560 560a31.91 31.91 0 0 1-22.63 9.38z"
                data-name="Layer 2"
                fill="currentColor"
              />
            </svg>
          </div>
        </span>
        <span
          className="c17"
        >
          <input
            checked={false}
            className="c18"
            disabled={false}
            type="checkbox"
          />
          Vital
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Form Hint 1`] = `
.c5 {
  display: block !important;
  padding-top: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.42857;
  padding-left: 1px;
  white-space: normal;
  color: #2BCD86;
}

.c6 {
  display: block !important;
  padding-top: 0.4rem;
  font-size: 0.8rem;
  line-height: 1.42857;
  padding-left: 1px;
  white-space: normal;
  color: #95ABD3;
}

.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c3 {
  position: relative;
  border-radius: inherit;
}

.c4 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
}

.c4::-webkit-input-placeholder {
  color: #95ABD3;
}

.c4::-moz-placeholder {
  color: #95ABD3;
}

.c4:-ms-input-placeholder {
  color: #95ABD3;
}

.c4::placeholder {
  color: #95ABD3;
}

.c4:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c4:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c1 {
  display: table;
  margin-bottom: 1.866rem;
  position: relative;
  width: 100%;
}

.c1 > span {
  display: table-cell;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 1%;
  min-width: 8rem;
  padding-right: 1.2rem;
  line-height: 1;
  vertical-align: top;
  padding-top: calc(0.46633rem + 2px);
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={false}
    >
      Username
    </span>
    <div
      className="c3"
    >
      <input
        autoFocus={false}
        className="vital__input c4"
        disabled={false}
        onChange={[Function]}
        placeholder={null}
        spellCheck={false}
        type="text"
        value="dramsign"
      />
    </div>
    <div
      className="vital__hint c5"
    >
      Username is available
    </div>
    <div
      className="vital__hint c6"
    >
      Example: James Allen
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Form Input with Label 1`] = `
.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c2:before {
  content: '';
  display: inline-block;
  background-color: #EB5000;
  margin: -0.133rem 0.533rem 0 0;
  vertical-align: middle;
  height: 0.266rem;
  width: 0.266rem;
  border-radius: 50%;
  position: absolute;
  left: -0.666rem;
  top: 0.666rem;
}

.c3 {
  position: relative;
  border-radius: inherit;
}

.c4 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
}

.c4::-webkit-input-placeholder {
  color: #95ABD3;
}

.c4::-moz-placeholder {
  color: #95ABD3;
}

.c4:-ms-input-placeholder {
  color: #95ABD3;
}

.c4::placeholder {
  color: #95ABD3;
}

.c4:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c4:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c1 {
  display: block;
  margin-bottom: 1.333rem;
  position: relative;
  width: 100%;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={true}
    >
      Username
    </span>
    <div
      className="c3"
    >
      <input
        autoFocus={false}
        className="vital__input c4"
        disabled={false}
        onChange={[Function]}
        placeholder="Enter your username"
        spellCheck={false}
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Form Multiple & Addon 1`] = `
.c9 {
  position: relative;
  background: #F7F9FD;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E2F5;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #0E86FE;
  color: #ffffff;
  border-color: #0E86FE;
}

.c9:hover {
  background: #D8E2F5;
}

.c9:active {
  background: #C3D1EB;
}

.c9:hover {
  background: #41a0fe;
  border-color: #41a0fe;
}

.c9:active {
  background: #0167ce;
  border-color: #0167ce;
}

.c9[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FD;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  padding: 0.46633rem 0.8rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1;
  height: 1.93267rem;
  color: #7189B6;
  text-align: center;
  background-color: #EEF2FC;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  z-index: 5;
  position: relative;
  box-sizing: border-box;
}

.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c5 {
  position: relative;
  border-radius: inherit;
}

.c6 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
}

.c6::-webkit-input-placeholder {
  color: #95ABD3;
}

.c6::-moz-placeholder {
  color: #95ABD3;
}

.c6:-ms-input-placeholder {
  color: #95ABD3;
}

.c6::placeholder {
  color: #95ABD3;
}

.c6:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c6:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c3 {
  position: relative;
  display: table;
  width: 100%;
  border-collapse: separate;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c4 > * {
  width: calc(100% + 2px);
}

.c4:not(:first-child) > * {
  margin-left: -1px;
  margin-right: 0;
}

.c4:last-child * {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c4:first-child * {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c4:not(:first-child):not(:last-child) * {
  border-radius: 0;
}

.c7 {
  display: table-cell;
  vertical-align: middle;
  width: 1%;
  white-space: nowrap;
}

.c7 > * {
  width: calc(100% + 2px);
}

.c7:not(:first-child) > * {
  margin-left: -1px;
  margin-right: 0;
}

.c7:last-child * {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c7:first-child * {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c7:not(:first-child):not(:last-child) * {
  border-radius: 0;
}

.c1 {
  display: table;
  margin-bottom: 1.866rem;
  position: relative;
  width: 100%;
}

.c1 > span {
  display: table-cell;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 1%;
  min-width: 8rem;
  padding-right: 1.2rem;
  line-height: 1;
  vertical-align: top;
  padding-top: calc(0.46633rem + 2px);
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={false}
    >
      Weight
    </span>
    <div
      className="vital__multipleInput c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            autoFocus={false}
            className="vital__input c6"
            disabled={false}
            onChange={[Function]}
            placeholder="LabelAddon on the right"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          className="vital__addon c8"
        >
          kg
        </div>
      </div>
    </div>
  </div>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={false}
    >
      Price
    </span>
    <div
      className="vital__multipleInput c3"
    >
      <div
        className="c7"
      >
        <div
          className="vital__addon c8"
        >
          <svg
            height="1em"
            name="dollar"
            viewBox="0 0 981.58 981.58"
            width="1em"
          >
            <path
              d="M972.21 644.53a32 32 0 0 0-35.82-6.53 447.58 447.58 0 0 1-501.17-91.63 448.45 448.45 0 0 1-91.64-501.18 32 32 0 0 0-42.34-42.35 512.1 512.1 0 1 0 452.82 918 508.584 508.584 0 0 0 37.32-22.15 32 32 0 1 0-35-53.6 445.616 445.616 0 0 1-32.65 19.38A448.09 448.09 0 0 1 256 101.81a511.65 511.65 0 0 0 134 489.81 513.2 513.2 0 0 0 489.72 133.94 448.47 448.47 0 0 1-32.84 41.61 32 32 0 1 0 47.83 42.53 512.16 512.16 0 0 0 84-129.35 32 32 0 0 0-6.5-35.82z"
              data-name="Layer 2"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            autoFocus={false}
            className="vital__input c6"
            disabled={false}
            onChange={[Function]}
            placeholder="LabelAddon on the both"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="c7"
      >
        <div
          className="vital__addon c8"
        >
          .00
        </div>
      </div>
    </div>
  </div>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={false}
    >
      Button
    </span>
    <div
      className="vital__multipleInput c3"
    >
      <div
        className="c4"
      >
        <div
          className="c5"
        >
          <input
            autoFocus={false}
            className="vital__input c6"
            disabled={false}
            onChange={[Function]}
            placeholder="LabelAddon on the both"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="c4"
      >
        <button
          className="vital__button c9"
          disabled={false}
          onClick={[Function]}
          selected={false}
          size="medium"
        >
          Search
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Form Multiple & Button 1`] = `
.c5 {
  position: relative;
  background: #F7F9FD;
  color: #456296;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E2F5;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:hover {
  background: #D8E2F5;
}

.c5:active {
  background: #C3D1EB;
}

.c5[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FD;
  cursor: not-allowed;
  pointer-events: none;
}

.c8 {
  position: relative;
  background: #F7F9FD;
  color: #0E86FE;
  cursor: pointer;
  border-width: 1px;
  border-style: solid;
  border-color: #D8E2F5;
  font-size: 1rem;
  border-radius: 4px;
  padding: calc(0.533rem - 1px) 1.066rem;
  line-height: 1;
  font-weight: normal;
  margin: 0;
  outline: none;
  padding: calc(0.533rem - 1px) 1.066rem;
  box-sizing: border-box;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background: #0E86FE;
  color: #ffffff;
  border-color: #0E86FE;
}

.c8:hover {
  background: #D8E2F5;
}

.c8:active {
  background: #C3D1EB;
}

.c8:hover {
  background: #41a0fe;
  border-color: #41a0fe;
}

.c8:active {
  background: #0167ce;
  border-color: #0167ce;
}

.c8[disabled] {
  color: #93a8ce;
  border-color: #eaeff8;
  background-color: #F7F9FD;
  cursor: not-allowed;
  pointer-events: none;
}

.c2 {
  position: relative;
  font-size: 0.866rem;
  color: #7189B6;
  line-height: 1.8;
  display: inline-block;
  text-align: left;
}

.c6 {
  position: relative;
  border-radius: inherit;
}

.c7 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
}

.c7::-webkit-input-placeholder {
  color: #95ABD3;
}

.c7::-moz-placeholder {
  color: #95ABD3;
}

.c7:-ms-input-placeholder {
  color: #95ABD3;
}

.c7::placeholder {
  color: #95ABD3;
}

.c7:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c7:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c3 {
  position: relative;
  display: table;
  width: 100%;
  border-collapse: separate;
}

.c4 {
  display: table-cell;
  vertical-align: middle;
}

.c4 > * {
  width: calc(100% + 2px);
}

.c4:not(:first-child) > * {
  margin-left: -1px;
  margin-right: 0;
}

.c4:last-child * {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.c4:first-child * {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c4:not(:first-child):not(:last-child) * {
  border-radius: 0;
}

.c1 {
  display: table;
  margin-bottom: 1.866rem;
  position: relative;
  width: 100%;
}

.c1 > span {
  display: table-cell;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  width: 1%;
  min-width: 8rem;
  padding-right: 1.2rem;
  line-height: 1;
  vertical-align: top;
  padding-top: calc(0.46633rem + 2px);
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={false}
    >
      Button
    </span>
    <div
      className="vital__multipleInput c3"
    >
      <div
        className="c4"
      >
        <button
          className="vital__button c5"
          disabled={false}
          onClick={[Function]}
          selected={false}
          size="medium"
        >
          A
        </button>
      </div>
      <div
        className="c4"
      >
        <button
          className="vital__button c5"
          disabled={false}
          onClick={[Function]}
          selected={false}
          size="medium"
        >
          B
        </button>
      </div>
      <div
        className="c4"
      >
        <button
          className="vital__button c5"
          disabled={false}
          onClick={[Function]}
          selected={false}
          size="medium"
        >
          C
        </button>
      </div>
      <div
        className="c4"
      >
        <div
          className="c6"
        >
          <input
            autoFocus={false}
            className="vital__input c7"
            disabled={false}
            onChange={[Function]}
            placeholder="LabelAddon on the both"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="vital__fieldInput c1"
  >
    <span
      className="vital__label c2"
      required={false}
    >
      Button
    </span>
    <div
      className="vital__multipleInput c3"
    >
      <div
        className="c4"
      >
        <div
          className="c6"
        >
          <input
            autoFocus={false}
            className="vital__input c7"
            disabled={false}
            onChange={[Function]}
            placeholder="LabelAddon on the both"
            spellCheck={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="c4"
      >
        <button
          className="vital__button c8"
          disabled={false}
          onClick={[Function]}
          selected={false}
          size="medium"
        >
          Search
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Packages | Form/Input Basic 1`] = `
.c1 {
  position: relative;
  border-radius: inherit;
}

.c2 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
}

.c2::-webkit-input-placeholder {
  color: #95ABD3;
}

.c2::-moz-placeholder {
  color: #95ABD3;
}

.c2:-ms-input-placeholder {
  color: #95ABD3;
}

.c2::placeholder {
  color: #95ABD3;
}

.c2:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c2:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      autoFocus={false}
      className="vital__input c2"
      defaultValue="default"
      disabled={false}
      placeholder="Uncontrolled Input"
      spellCheck={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Packages | Form/Input Controlled Input 1`] = `
.c1 {
  position: relative;
  border-radius: inherit;
}

.c2 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
}

.c2::-webkit-input-placeholder {
  color: #95ABD3;
}

.c2::-moz-placeholder {
  color: #95ABD3;
}

.c2:-ms-input-placeholder {
  color: #95ABD3;
}

.c2::placeholder {
  color: #95ABD3;
}

.c2:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c2:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      autoFocus={false}
      className="vital__input c2"
      disabled={false}
      onChange={[Function]}
      placeholder="Controlled Input"
      spellCheck={false}
      type="text"
      value="123"
    />
  </div>
</div>
`;

exports[`Storyshots Packages | Form/Input With Icon 1`] = `
.c1 {
  position: relative;
  border-radius: inherit;
}

.c2 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
  padding-right: 2.2em;
}

.c2::-webkit-input-placeholder {
  color: #95ABD3;
}

.c2::-moz-placeholder {
  color: #95ABD3;
}

.c2:-ms-input-placeholder {
  color: #95ABD3;
}

.c2::placeholder {
  color: #95ABD3;
}

.c2:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c2:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c3 {
  vertical-align: middle;
  height: 1.93267rem;
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
  padding-left: 2.2em;
}

.c3::-webkit-input-placeholder {
  color: #95ABD3;
}

.c3::-moz-placeholder {
  color: #95ABD3;
}

.c3:-ms-input-placeholder {
  color: #95ABD3;
}

.c3::placeholder {
  color: #95ABD3;
}

.c3:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c3:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

.c0 {
  max-width: 500px;
  padding: 40px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <input
      autoFocus={false}
      className="vital__input c2"
      disabled={false}
      placeholder="Right side icon"
      spellCheck={false}
      type="text"
    />
  </div>
  <br />
  <div
    className="c1"
  >
    <input
      autoFocus={false}
      className="vital__input c3"
      disabled={false}
      placeholder="Left side icon"
      spellCheck={false}
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots Packages | Form/Switch Basic 1`] = `
.c0 {
  display: none;
}

.c0:checked + label {
  background-color: #0E86FE;
  box-shadow: 0 0 0 1px #0E86FE;
}

.c0:checked + label div {
  -webkit-transform: translate3d(30px,0,0);
  -ms-transform: translate3d(30px,0,0);
  transform: translate3d(30px,0,0);
  border-color: #0E86FE;
  box-shadow: 0 0 0 3px rgba(14,134,254,0.3);
}

.c0:disabled + label {
  background-color: #EEF2FC;
  cursor: not-allowed;
  point-events: none;
}

.c0:disabled + label div {
  background-color: #EEF2FC;
  box-shadow: none;
}

.c1 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  width: 53px;
  height: 24px;
  border-radius: 4px;
  background-color: #EEF2FC;
  padding: 1px;
  box-shadow: 0 0 0 1px #C3D1EB;
  cursor: pointer;
}

<div
  className="vital__switch "
  onClick={[Function]}
>
  <input
    checked={false}
    className="c0"
    disabled={false}
    type="checkbox"
  />
  <label
    className="c1"
    disabled={false}
  />
</div>
`;

exports[`Storyshots Packages | Form/TextArea Basic 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
  height: auto;
}

.c0::-webkit-input-placeholder {
  color: #95ABD3;
}

.c0::-moz-placeholder {
  color: #95ABD3;
}

.c0:-ms-input-placeholder {
  color: #95ABD3;
}

.c0::placeholder {
  color: #95ABD3;
}

.c0:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c0:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

<textarea
  autoFocus={false}
  className="c0"
  defaultValue=""
  disabled={false}
  id={null}
  maxLength={null}
  onChange={null}
  placeholder="Uncontrolled Input"
  rows={3}
  spellCheck={false}
/>
`;

exports[`Storyshots Packages | Form/TextArea Controlled TextArea 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  line-height: 1;
  box-sizing: border-box;
  background-color: #ffffff;
  border: 1px solid #C3D1EB;
  border-radius: 4px;
  -webkit-transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
  outline: 0;
  z-index: 5;
  font-size: 1rem;
  padding: 0.46633rem 0.8rem;
  color: #456296;
  height: auto;
}

.c0::-webkit-input-placeholder {
  color: #95ABD3;
}

.c0::-moz-placeholder {
  color: #95ABD3;
}

.c0:-ms-input-placeholder {
  color: #95ABD3;
}

.c0::placeholder {
  color: #95ABD3;
}

.c0:focus {
  outline: 0;
  border: 1px solid #0E86FE;
  box-shadow: 0 0 0 2px rgba(14,134,254,0.2);
  z-index: 7;
}

.c0:disabled {
  pointer-events: none;
  border-color: #C3D1EB;
  background-color: #EEF2FC;
}

<textarea
  autoFocus={false}
  className="vital__textarea c0"
  defaultValue=""
  disabled={false}
  id={null}
  maxLength={null}
  onChange={null}
  placeholder="Controlled Input"
  rows={3}
  spellCheck={false}
  value=""
/>
`;
